grafana/traefik-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: kube-prometheus
spec:
  rules:
  - host: grafana.baishuchao.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
